base/speedtest/speedtest-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: speedtest
  labels:
    app: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: speedtest
        image: openspeedtest/latest
        ports:
        - containerPort: 3000
          name: http
